# SSOOIGLEII_P3

./: CMakeLists.txt  Makefile  README.md  reto11ampliado
data/: prueba.txt  pruebatildes.txt
exec/: Client_Management  Client_Normal  Client_Premium  Client_Premium_Limit  PaymentSystem  ssooigle
include/: Buscador.h  Client.h  Client_Management.h  Client_Normal.h  Client_Premium.h  Client_Premium_Limit.h  Clients_Common.h  Coincidence_Format.h  PaymentSystem.h  Text.h  colors.h  definitions.h  mycmp.h  semaphoreI.h
src/: Buscador.cpp  Client_Management.cpp  Client_Normal.cpp  Client_Premium.cpp  Client_Premium_Limit.cpp  Clients_Common.cpp  Clients_Functions.cpp  Coincidence_Format.cpp  PaymentSystem.cpp  Text.cpp  mycmp.cpp  reto11.cpp  reto11ampliado.cpp  semaphoreI.cpp
